@@ -3,6 +3,10 @@ Thanks to everyone who made this possible, including:
 
 - David Clark for packaging and help with releases
 
+- Francis Irving for Debian packaging
+
+- Niki Spahiev for bugfixes
+
 - Jan Ekhol, Ray Kelm, and Peter Nicolai for initial design advise
 
 - Python and the team behind it, headed by Guido van Rossum
